bk_ida/gccida/g2/dwarf2out_begin_prologue
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_begin_prologue/src/dwarf2out.c:2534:40: error: use of undeclared identifier 'off_665E02'
sprintf( v8, "*.%s%u", ( const char *)&off_665E02, current_funcdef_number); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_begin_prologue/src/dwarf2out.c:2535:52: error: use of undeclared identifier 'off_665E02'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&off_665E02, current_funcdef_number); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_begin_prologue/src/dwarf2out.c:2562:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = 0LL; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_begin_prologue/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_begin_prologue/src/dwarf2out.c:2566:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_begin_prologue/src/obj/dwarf2out.o] Error 1
